--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /*max-width: 20%;*/
+    max-width: 200px;
+    max-height: 300px;
     padding: 10px;
+    margin: 2px;
 }
 
 .lists {
