--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,10 @@ p, button {
 
 .lists {
     display: flex;
+    margin: 10px 30px 10px 30px;
 }
 
 .column {
     width: 25%;
+    margin: 10px;
 }
