--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,12 @@ p, button {
     width: 25%;
     margin: 10px;
 }
+
+.nav {
+    display: flex;
+    position: fixed;
+    top: 0;
+    background: white;
+    width: 100%;
+    margin: auto;
+}
